Revision history for Red

{{$NEXT}}

0.1.61  2022-06-11T21:11:28+01:00
    - add error message on specific raku versions
    - add == and eq operators for enumerables
    - fix aggreg methods race condition
    - fix test 61

0.1.60  2022-05-14T16:09:15+01:00
    - fix Pg select json (missing update)
    - add relationship agregations #514
    - fix .^create with Seq

0.1.59  2022-04-30T15:52:08+01:00
    - fix schema.create

0.1.58  2022-04-10T23:01:15+01:00
    - add `is sub-model` to `subset`

0.1.57  2022-04-03T20:10:00+01:00
    - submodel do not need a name

0.1.57  2022-04-03T18:44:25+01:00
    - Fix dependency

0.1.56  2022-04-03T01:09:36+01:00
    - Fix coersion test
    - Create .^submodel

0.1.55  2022-04-01T21:23:35+01:00
    - Moving Red to zef ecosystem
    - Make auto detect array types

0.1.55  2022-03-07T21:48:40Z
    - Fix Red::Schema.create's emit
    - Fix several AST translations with enum

0.1.54  2021-12-21T00:47:26Z
    - Break when accessing a column on a Type object
    - .^saved-on-db on prefetched relationships

0.1.53  2021-11-22T02:17:40Z
    - Separate the Model generation for changing attributes
    - Make join on update use subselect
    - Teaching AST new dance moves (.replace)
    - Create Red::Config

0.1.52  2021-10-22T21:33:53+01:00
    - Fix usage of parameterized roles

0.1.51  2021-10-14T21:11:05+01:00
    - Fix red-do on SQLite

0.1.49  2021-10-06T18:16:00Z
    - Error on new with wrong type parameter
    - Create on transaction

0.1.49  2021-10-06T18:16:00Z
    - Send to cpan... (error on release)

0.1.48  2021-10-06T17:47:32Z
    - Throws error when setting a column attribute to a wrong type value

0.1.47  2021-09-13T22:55:22+01:00
    - Create Red.ping
    - Create Red::Driver.ping
    - small fix to introductory README example #502 (thanks @dwarring)
    - Really create a new connection for transaction in Pg #504 (thanks @jonathanstowe)
    - Fix sporadic warnings #509 (thanks @jonathanstowe)