@@ -1,6 +1,8 @@
 Revision history for Red
 
 {{$NEXT}}
+    - fix the way enums are stored on models (decont)
+    - set type on column when setting Nil to it (TODO: handle default values)
 
 0.1.61  2022-06-11T21:11:28+01:00
     - add error message on specific raku versions
